syntax = "proto3";
package api.auth.service.v1;
import "api/ws/v1/ws.proto";
option go_package = "api/auth/service/v1;v1";

service Auth {
  rpc UserRegister(UserRegisterReq) returns(UserRegisterResp);
  rpc UserToken(UserTokenReq) returns(UserTokenResp);
  rpc ForceLogout(ForceLogoutReq) returns(ForceLogoutResp);
}

message CommonResp{
  int32   errCode = 1;
  string  errMsg = 2;
}

message UserRegisterReq {
  api.ws.v1.UserInfo userInfo = 1;
  string operationID = 2;
}

message UserRegisterResp {
  CommonResp CommonResp = 1;
}

message UserTokenReq {
  int32  Platform = 1;
  string FromUserID = 2;
  string OpUserID = 3;
  string OperationID = 4;
  string LoginIp = 5;
}
message UserTokenResp {
  CommonResp CommonResp = 1;
  string Token = 2;
  int64  ExpiredTime = 3;
}

message ForceLogoutReq {
  int32  Platform = 1;
  string FromUserID = 2;
  string OpUserID = 3;
  string OperationID = 4;
}
message ForceLogoutResp {
  CommonResp CommonResp = 1;
}
